--- a/crates/daemon-slayer-tray/Cargo.toml
+++ b/crates/daemon-slayer-tray/Cargo.toml
@@ -7,6 +7,6 @@ version = "0.1.0"
 async-trait = "0.1"
 daemon-slayer-client = { path = "../daemon-slayer-client" }
 image = "0.24"
-tao = { git = "https://github.com/tauri-apps/tao", branch = "muda" }
+tao = "0.22.1"
 tokio = { version = "1", features = ["sync", "macros", "time"] }
-tray-icon = "0.7"
+tray-icon = "0.8"
