--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 [dependencies]
 arc-swap = { version = "1" }
 bollard = { version = "0.14", optional = true }
-confique = { version = ">= 0.2.2", optional = true }
+confique = { version = "0.2.2", optional = true }
 daemon-slayer-core = { path = "../daemon-slayer-core", features = [
     "config",
     "process",
@@ -17,7 +17,7 @@ enumflags2 = "0.7"
 eyre = "0.6"
 owo-colors = { version = "3", features = ["supports-colors"] }
 serde = { version = "1", features = ["derive"] }
-spinoff = { version = "0.7.0", optional = true }
+spinoff = { version = "0.8", optional = true }
 strum = { version = "0.25", features = ["derive"] }
 thiserror = "1"
 tokio = { version = "1", features = ["time"] }
@@ -31,7 +31,7 @@ colored = { version = "2", optional = true }
 windows-service = { git = "https://github.com/aschey/windows-service-rs", rev = "32919aebe4c59f7855a8ebd72fe7d716db6a8f28" }
 
 [target.'cfg(target_os="linux")'.dependencies]
-systemd_client = { git = "https://github.com/aschey/systemd-client", rev = "220fb254a657fcc78907d7997a13a098267ff5ca" }
+systemd_client = { git = "https://github.com/aschey/systemd-client", rev = "dcd7e9fda074ecc57715efd457952dfbc0020ecf" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 directories = "5"
