--- a/crates/daemon-slayer/Cargo.toml
+++ b/crates/daemon-slayer/Cargo.toml
@@ -76,6 +76,7 @@ server = [
   "daemon-slayer-config?/server",
   "daemon-slayer-logging?/server",
 ]
+socket-activation = ["daemon-slayer-server?/socket-activation"]
 signals = ["daemon-slayer-signals"]
 task-queue = ["daemon-slayer-task-queue"]
 tray = ["daemon-slayer-tray", "client"]
