--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,8 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
       - uses: Swatinem/rust-cache@v2
+        with:
+          key: "${{ matrix.test }}-${{ matrix.os }}"
       - name: Install extra deps (ubuntu only)
         if: matrix.os == 'ubuntu-latest'
         run: |
