find best ip to broastcast

--- a/crates/daemon-slayer-network/Cargo.toml
+++ b/crates/daemon-slayer-network/Cargo.toml
@@ -18,3 +18,5 @@ serde_json = "1"
 tokio-util = { version = "0.7", features = ["net", "codec"] }
 futures = "0.3"
 bytes = "1"
+if-addrs = "0.10"
+ipnet = "2"
