--- a/crates/daemon-slayer-core/Cargo.toml
+++ b/crates/daemon-slayer-core/Cargo.toml
@@ -27,6 +27,7 @@ unicode-width = { version = "0.1", optional = true }
 futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
 strip-ansi-escapes = { version = "0.2", optional = true }
 parity-tokio-ipc = { git = "https://github.com/aschey/parity-tokio-ipc", rev = "588198a0abb32a79f6f3e656ff0472008e4ba9b8" }
+async-stream = { version = "0.3", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.52", optional = true, features = [
@@ -67,7 +68,7 @@ config = [
     "daemon-slayer-macros/config",
 ]
 health-check = []
-server = ["tokio-stream", "background-service"]
+server = ["tokio-stream", "async-stream", "background-service"]
 signal = []
 notify = []
 process = [
