add more mac runners

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,14 @@ jobs:
     strategy:
       matrix:
         include:
+          - os: macos-13-arm64
+            test: sudo cargo make test-admin
+          - os: macos-13-arm64
+            test: cargo make test
+          - os: macos-13
+            test: sudo cargo make test-admin
+          - os: macos-13
+            test: cargo make test
           - os: macos-12
             test: sudo cargo make test-admin
           - os: macos-12
