--- a/examples/mdns/Cargo.toml
+++ b/examples/mdns/Cargo.toml
@@ -4,8 +4,8 @@ name = "mdns"
 version = "0.1.0"
 
 [dependencies]
-axum = "0.6.20"
-confique = "0.2.4"
+axum = "0.7.4"
+confique = "0.2.5"
 daemon-slayer = { path = "../../crates/daemon-slayer", features = [
     "client-standard",
     "server-standard",
@@ -21,10 +21,11 @@ daemon-slayer-logging = { path = "../../crates/daemon-slayer-logging", features 
 derive_more = { version = "0.99.17", default-features = false, features = [
     "as_ref",
 ] }
-reqwest = "0.11.22"
-serde = "1.0.192"
-tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
-tower-http = { version = "0.4.4", features = ["trace"] }
+futures = "0.3.30"
+reqwest = "0.11.25"
+serde = "1.0.197"
+tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 
 [[bin]]
