--- a/crates/daemon-slayer-network/Cargo.toml
+++ b/crates/daemon-slayer-network/Cargo.toml
@@ -13,7 +13,6 @@ recap = { git = "https://github.com/klaatu01/recap", rev = "97f7923cd18dae3b8cce
 serde = { version = "1", features = ["derive"] }
 gethostname = "0.4"
 tokio = { version = "1", features = ["sync"] }
-net-route = { git = "https://github.com/aschey/net-route", rev = "5295214616effe9e35bad2d4f25aa82bce135508" }
 serde_json = "1"
 tokio-util = { version = "0.7", features = ["net", "codec"] }
 futures = "0.3"
@@ -22,6 +21,7 @@ if-addrs = "0.11"
 ipnet = "2"
 tap = "1"
 tracing = "0.1.40"
+net-route = "0.4.2"
 
 [features]
 cli = ["daemon-slayer-core/cli"]
