--- a/examples/mdns/Cargo.toml
+++ b/examples/mdns/Cargo.toml
@@ -22,19 +22,20 @@ derive_more = { version = "0.99.17", default-features = false, features = [
     "as_ref",
 ] }
 futures = "0.3.30"
-reqwest = "0.11.25"
+reqwest = "0.12.3"
 serde = "1.0.197"
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 
-[[bin]]
-name = "mdns-client"
-path = "src/bin/client.rs"
 
 [[bin]]
-name = "mdns-server"
-path = "src/bin/server.rs"
+name = "mdns-server1"
+path = "src/bin/server1.rs"
+
+[[bin]]
+name = "mdns-server2"
+path = "src/bin/server2.rs"
 
 [build-dependencies]
 daemon-slayer = { path = "../../crates/daemon-slayer", features = [
