remove async-trait where possible

--- a/crates/daemon-slayer-cli/Cargo.toml
+++ b/crates/daemon-slayer-cli/Cargo.toml
@@ -10,3 +10,4 @@ tracing = "0.1"
 
 [dev-dependencies]
 tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
+async-trait = "0.1"
