--- a/crates/daemon-slayer-build-info/Cargo.toml
+++ b/crates/daemon-slayer-build-info/Cargo.toml
@@ -10,6 +10,7 @@ console = { version = "0.15", optional = true }
 daemon-slayer-core = { path = "../daemon-slayer-core" }
 vergen = { version = "8", optional = true }
 vergen-pretty = { version = "0.3", features = ["color"], optional = true }
+async-trait = { version = "0.1", optional = true }
 
 [features]
 build = ["vergen/build"]
@@ -18,4 +19,4 @@ git = ["vergen/git", "vergen/gix"]
 gix = ["vergen/gix"]
 rustc = ["vergen/rustc"]
 si = ["vergen/si"]
-cli = ["daemon-slayer-core/cli", "vergen-pretty", "console"]
+cli = ["daemon-slayer-core/cli", "vergen-pretty", "console", "async-trait"]
