--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -21,6 +21,7 @@ spinoff = { version = "0.8", optional = true }
 strum = { version = "0.26", features = ["derive"] }
 thiserror = "1"
 tokio = { version = "1", features = ["time"] }
+async-trait = "0.1"
 
 [target.'cfg(windows)'.dependencies]
 regex = "1"
