--- a/crates/daemon-slayer-console/Cargo.toml
+++ b/crates/daemon-slayer-console/Cargo.toml
@@ -14,18 +14,18 @@ daemon-slayer-core = { path = "../daemon-slayer-core", features = [
 ], optional = true }
 futures = { version = "0.3" }
 serde = { version = "1", optional = true }
-tilia-widget = { git = "https://github.com/aschey/tilia", rev = "6dd5ae029904aa95e711670853f9700738f9da97", features = [
+tilia-widget = { git = "https://github.com/aschey/tilia", rev = "9d637e70c8990f9aa444908637985a40b9c0a47e", features = [
     "ipc",
     "docker",
 ] }
-tilia = { git = "https://github.com/aschey/tilia", rev = "6dd5ae029904aa95e711670853f9700738f9da97", features = [
+tilia = { git = "https://github.com/aschey/tilia", rev = "9d637e70c8990f9aa444908637985a40b9c0a47e", features = [
     "ipc",
     "docker",
 ] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 ratatui = { version = "0.26" }
-
+async-trait = { version = "0.1", optional = true }
 
 [features]
-cli = ["daemon-slayer-core/cli"]
+cli = ["daemon-slayer-core/cli", "async-trait"]
 config = ["confique", "serde"]
