--- a/crates/daemon-slayer-error-handler/Cargo.toml
+++ b/crates/daemon-slayer-error-handler/Cargo.toml
@@ -4,7 +4,7 @@ name = "daemon-slayer-error-handler"
 version = "0.1.0"
 
 [features]
-cli = ["daemon-slayer-core/cli"]
+cli = ["daemon-slayer-core/cli", "async-trait"]
 notify = ["daemon-slayer-core/notify"]
 
 [dependencies]
@@ -14,3 +14,4 @@ tap = "1"
 thiserror = "1"
 tracing = "0.1"
 tokio = "1"
+async-trait = { version = "0.1", optional = true }
