--- a/crates/daemon-slayer-logging/Cargo.toml
+++ b/crates/daemon-slayer-logging/Cargo.toml
@@ -4,7 +4,7 @@ name = "daemon-slayer-logging"
 version = "0.1.0"
 
 [features]
-cli = ["daemon-slayer-core/cli"]
+cli = ["daemon-slayer-core/cli", "async-trait"]
 config = ["confique", "serde"]
 file = ["directories"]
 ipc = ["tilia"]
@@ -24,7 +24,7 @@ once_cell = "1"
 serde = { version = "1", optional = true }
 tap = "1"
 thiserror = "1"
-tilia = { git = "https://github.com/aschey/tilia", rev = "6dd5ae029904aa95e711670853f9700738f9da97", features = [
+tilia = { git = "https://github.com/aschey/tilia", rev = "9d637e70c8990f9aa444908637985a40b9c0a47e", features = [
     "ipc",
 ], optional = true }
 time = "0.3"
@@ -35,6 +35,7 @@ tracing-subscriber = { version = "0.3", features = [
     "local-time",
     "env-filter",
 ] }
+async-trait = { version = "0.1", optional = true }
 
 
 [target.'cfg(windows)'.dependencies]
