--- a/crates/daemon-slayer-network/Cargo.toml
+++ b/crates/daemon-slayer-network/Cargo.toml
@@ -22,6 +22,7 @@ ipnet = "2"
 tap = "1"
 tracing = "0.1.40"
 net-route = "0.4.2"
+async-trait = { version = "0.1", optional = true }
 
 [features]
 cli = ["daemon-slayer-core/cli"]
