--- a/crates/daemon-slayer-network/Cargo.toml
+++ b/crates/daemon-slayer-network/Cargo.toml
@@ -25,4 +25,4 @@ net-route = "0.4.2"
 async-trait = { version = "0.1", optional = true }
 
 [features]
-cli = ["daemon-slayer-core/cli"]
+cli = ["daemon-slayer-core/cli", "async-trait"]
