--- a/crates/daemon-slayer-build-info/Cargo.toml
+++ b/crates/daemon-slayer-build-info/Cargo.toml
@@ -6,17 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-console = { version = "0.15", optional = true }
-daemon-slayer-core = { path = "../daemon-slayer-core" }
-vergen = { version = "8", optional = true }
-vergen-pretty = { version = "0.3", features = ["color"], optional = true }
-async-trait = { version = "0.1", optional = true }
-
-[features]
-build = ["vergen/build"]
-cargo = ["vergen/cargo"]
-git = ["vergen/git", "vergen/gix"]
-gix = ["vergen/gix"]
-rustc = ["vergen/rustc"]
-si = ["vergen/si"]
-cli = ["daemon-slayer-core/cli", "vergen-pretty", "console", "async-trait"]
+console = { version = "0.15" }
+daemon-slayer-core = { path = "../daemon-slayer-core", features = ["cli"] }
+vergen-pretty = { version = "0.3", features = ["color"] }
+async-trait = { version = "0.1" }
