--- a/examples/mdns/Cargo.toml
+++ b/examples/mdns/Cargo.toml
@@ -18,13 +18,13 @@ daemon-slayer-logging = { path = "../../crates/daemon-slayer-logging", features 
     "system",
     "ipc",
 ] }
-derive_more = { version = "0.99.17", default-features = false, features = [
+derive_more = { version = "0.99.18", default-features = false, features = [
     "as_ref",
 ] }
 futures = "0.3.30"
-reqwest = "0.12.3"
-serde = "1.0.197"
-tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
+reqwest = "0.12.5"
+serde = "1.0.204"
+tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
 tower-http = { version = "0.5.2", features = ["trace"] }
 tracing = "0.1.40"
 
@@ -38,11 +38,7 @@ name = "mdns-server2"
 path = "src/bin/server2.rs"
 
 [build-dependencies]
+vergen-gix = { version = "1.0", features = ["build", "cargo", "rustc", "si"] }
 daemon-slayer = { path = "../../crates/daemon-slayer", features = [
     "build-info",
-    "build-info-build",
-    "build-info-cargo",
-    "build-info-git",
-    "build-info-rustc",
-    "build-info-si",
 ] }
