--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,4 @@
 [workspace]
-exclude = [
-    "crates/daemon-slayer-gui",
-    "crates/daemon-slayer-console",
-    "crates/daemon-slayer-tray",
-]
+exclude = ["crates/daemon-slayer-gui"]
 members = ["crates/*", "integration-tests"]
 resolver = "2"
