--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -45,3 +45,4 @@ tokio = { version = "1", features = ["time", "process"] }
 cli = ["daemon-slayer-core/cli", "spinoff", "colored"]
 config = ["confique"]
 docker = ["bollard"]
+socket-activation = ["daemon-slayer-core/socket-activation"]
