--- a/crates/daemon-slayer-health-check/Cargo.toml
+++ b/crates/daemon-slayer-health-check/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 daemon-slayer-core = { path = "../daemon-slayer-core", features = [
     "health-check",
 ] }
-parity-tokio-ipc = { git = "https://github.com/aschey/parity-tokio-ipc", rev = "feb8297ed586862034faed03794d5d46519cd064", optional = true }
+tipsy = { version = "0.2", optional = true }
 reqwest = { version = "0.12", optional = true }
 tokio = { version = "1", features = ["net"] }
 tonic = { version = "0.12", optional = true }
@@ -18,4 +18,4 @@ async-trait = "0.1"
 cli = ["daemon-slayer-core/cli"]
 grpc-health-check = ["tonic", "tonic-health"]
 http-health-check = ["reqwest"]
-ipc-health-check = ["parity-tokio-ipc"]
+ipc-health-check = ["tipsy"]
