--- a/crates/daemon-slayer-server/Cargo.toml
+++ b/crates/daemon-slayer-server/Cargo.toml
@@ -15,7 +15,7 @@ futures = { version = "0.3" }
 tap = "1"
 thiserror = "1"
 tracing = "0.1"
-parity-tokio-ipc = { git = "https://github.com/aschey/parity-tokio-ipc", rev = "feb8297ed586862034faed03794d5d46519cd064" }
+tipsy = { version = "0.2", optional = true }
 async-trait = { version = "0.1", optional = true }
 
 [target.'cfg(windows)'.dependencies]
@@ -49,4 +49,9 @@ raunch = { version = "1", optional = true }
 
 [features]
 cli = ["daemon-slayer-core/cli", "async-trait"]
-socket-activation = ["sd-listen-fds", "raunch"]
+socket-activation = [
+    "sd-listen-fds",
+    "raunch",
+    "daemon-slayer-core/socket-activation",
+    "tipsy",
+]
