--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
-exclude = ["crates/daemon-slayer-gui"]
+exclude = ["crates/daemon-slayer-gui", "crates/daemon-slayer-task-queue"]
 members = ["crates/*", "integration-tests"]
 resolver = "2"
