--- a/crates/daemon-slayer-console/Cargo.toml
+++ b/crates/daemon-slayer-console/Cargo.toml
@@ -4,8 +4,8 @@ name = "daemon-slayer-console"
 version = "0.1.0"
 
 [dependencies]
-confique = { version = ">= 0.2.2", optional = true }
-crossterm = { version = "0.27", features = ["event-stream"] }
+confique = { version = "0.2.2", optional = true }
+crossterm = { version = "0.28", features = ["event-stream"] }
 daemon-slayer-client = { path = "../daemon-slayer-client" }
 daemon-slayer-core = { path = "../daemon-slayer-core", features = [
     "server",
@@ -14,16 +14,16 @@ daemon-slayer-core = { path = "../daemon-slayer-core", features = [
 ], optional = true }
 futures = { version = "0.3" }
 serde = { version = "1", optional = true }
-tilia-widget = { git = "https://github.com/aschey/tilia", rev = "9aa29cd4f2966fddec1ab2f233cb1f8c4a668bfc", features = [
+tilia-widget = { git = "https://github.com/aschey/tilia", rev = "08dbdb67abbee6a6f7ec6442e6ad590222d630c3", features = [
     "ipc",
     "docker",
 ] }
-tilia = { git = "https://github.com/aschey/tilia", rev = "9aa29cd4f2966fddec1ab2f233cb1f8c4a668bfc", features = [
+tilia = { git = "https://github.com/aschey/tilia", rev ="08dbdb67abbee6a6f7ec6442e6ad590222d630c3", features = [
     "ipc",
     "docker",
 ] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-ratatui = { version = "0.27" }
+ratatui = { version = "0.28" }
 async-trait = { version = "0.1", optional = true }
 
 [features]
