--- a/crates/daemon-slayer/Cargo.toml
+++ b/crates/daemon-slayer/Cargo.toml
@@ -13,7 +13,10 @@ client-standard = [
   "error-handler",
   "process",
 ]
-extras = ["file-watcher", "task-queue"]
+extras = [
+  "file-watcher", 
+  #"task-queue"
+]
 server-standard = [
   "server",
   "cli",
@@ -76,7 +79,7 @@ socket-activation = [
   "daemon-slayer-client?/socket-activation",
 ]
 signals = ["daemon-slayer-signals"]
-task-queue = ["daemon-slayer-task-queue"]
+# task-queue = ["daemon-slayer-task-queue"]
 tray = ["daemon-slayer-tray", "client"]
 notify = ["daemon-slayer-notify", "daemon-slayer-error-handler?/notify"]
 native-notification = ["notify", "daemon-slayer-notify/native-notification"]
@@ -96,7 +99,7 @@ daemon-slayer-logging = { path = "../daemon-slayer-logging", optional = true }
 daemon-slayer-process = { path = "../daemon-slayer-process", optional = true }
 daemon-slayer-server = { path = "../daemon-slayer-server", optional = true }
 daemon-slayer-signals = { path = "../daemon-slayer-signals", optional = true }
-daemon-slayer-task-queue = { path = "../daemon-slayer-task-queue", optional = true }
+# daemon-slayer-task-queue = { path = "../daemon-slayer-task-queue", optional = true }
 daemon-slayer-tray = { path = "../daemon-slayer-tray", optional = true }
 daemon-slayer-notify = { path = "../daemon-slayer-notify", optional = true }
 daemon-slayer-build-info = { path = "../daemon-slayer-build-info", optional = true }
