--- a/examples/old/examples/ipc/node-ipc-client/package.json
+++ b/examples/old/examples/ipc/node-ipc-client/package.json
@@ -10,8 +10,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "@types/node": "^18.11.9"
+    "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "ipc-client": "file:"
   }
 }
