--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -21,3 +21,6 @@ tracing = "0.1.40"
 
 [dev-dependencies]
 assert_cmd = "2.0.14"
+
+[lints.rust]
+unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
