--- a/crates/daemon-slayer/Cargo.toml
+++ b/crates/daemon-slayer/Cargo.toml
@@ -38,7 +38,6 @@ cli = [
   "daemon-slayer-config?/cli",
   "daemon-slayer-process?/cli",
   "daemon-slayer-notify?/cli",
-  "daemon-slayer-network?/cli",
 ]
 client = ["daemon-slayer-client"]
 docker = ["daemon-slayer-client?/docker"]
@@ -84,7 +83,7 @@ tray = ["daemon-slayer-tray", "client"]
 notify = ["daemon-slayer-notify", "daemon-slayer-error-handler?/notify"]
 native-notification = ["notify", "daemon-slayer-notify/native-notification"]
 dialog = ["notify", "daemon-slayer-notify/dialog"]
-network = ["daemon-slayer-network"]
+# network = ["daemon-slayer-network"]
 
 [dependencies]
 daemon-slayer-cli = { path = "../daemon-slayer-cli", optional = true }
@@ -103,4 +102,4 @@ daemon-slayer-signals = { path = "../daemon-slayer-signals", optional = true }
 daemon-slayer-tray = { path = "../daemon-slayer-tray", optional = true }
 daemon-slayer-notify = { path = "../daemon-slayer-notify", optional = true }
 daemon-slayer-build-info = { path = "../daemon-slayer-build-info", optional = true }
-daemon-slayer-network = { path = "../daemon-slayer-network", optional = true }
+# daemon-slayer-network = { path = "../daemon-slayer-network", optional = true }
