--- a/crates/daemon-slayer-tray/Cargo.toml
+++ b/crates/daemon-slayer-tray/Cargo.toml
@@ -8,4 +8,4 @@ daemon-slayer-client = { path = "../daemon-slayer-client" }
 image = "0.25"
 tao = "0.33"
 tokio = { version = "1", features = ["sync", "macros", "time"] }
-tray-icon = "0.20"
+tray-icon = { git = "https://github.com/aschey/tray-icon", rev = "7f72639d241164babc10185695d5db2ec8420b4f" }
